--- a/#src/_header.html
+++ b/#src/_header.html
@@ -1,5 +1,27 @@
 <header class="header">
 	<div class="header__content _container">
-
+		<div class="header__row">
+			<div class="header__column">
+				<a href="#" class="header__logo"><img src="img/logo.svg" alt="logo"></a>
+			</div>
+			<div class="header__column">
+				<div class="header__menu menu">
+					<div class="menu__icon icon-menu">
+						<span></span>
+						<span></span>
+						<span></span>
+					</div>
+					<nav class="menu__body">
+						<ul class="menu__list">
+							<li><a href="" class="menu__link">Nav Link</a></li>
+							<li><a href="" class="menu__link">Nav Link</a></li>
+							<li><a href="" class="menu__link">Nav Link</a></li>
+							<li><a href="" class="menu__link">Nav Link</a></li>
+						</ul>
+					</nav>
+				</div>
+				<button type="button" class="btn btn-orange">Work with us</button>
+			</div>
+		</div>
 	</div>
 </header>
