--- a/#src/index.html
+++ b/#src/index.html
@@ -1,17 +1,29 @@
 <!DOCTYPE html>
-<html lang="ru">
-	@@include('_head.html',{
-	"title":"Главная"
-	})
-	<body>
-		<div class="wrapper">
-			@@include('_header.html',{})
-			<main class="page">
+<html lang="en">
+@@include('_head.html',{
+"title":"Home"
+})
 
-			</main>
-			@@include('_footer.html',{})
-		</div>
-		@@include('_popup.html',{})
-		@@include('_js.html',{})
-	</body>
+<body>
+	<div class="wrapper">
+		@@include('_header.html',{})
+		<main class="page">
+			<div class="page__promo promo-page">
+				<div class="promo-page__content _container">
+					<div class="promo-page__text">
+						<h1 class="promo-page__title">Beautiful homes made for you</h1>
+						<article class="promo-page__descr">In oculis quidem se esse admonere interesse enim maxime placeat,
+							facere possimus, omnis. Et quidem faciunt, ut labore et accurate disserendum et harum quidem
+							exercitus quid.</article>
+					</div>
+					<a href="" class="promo-page__see">See all listings</a>
+				</div>
+			</div>
+		</main>
+		@@include('_footer.html',{})
+	</div>
+	@@include('_popup.html',{})
+	@@include('_js.html',{})
+</body>
+
 </html>
